# loan_assistant

./: .gitignore  README.md  all_requirements.txt  main.py  pyproject.toml  requirements.txt
app/: README.md  components.py  main.py  models.py  pyproject.toml  test.py
app/agent/: agent.py  model_loader.py  neural_network.py  ollama_run.py
app/agent/modules/: categorical_encoders.joblib  model.pth  numeric_scaler.joblib
app/components/: main_page.py  steps.py
backend/: README.md
conf/base/: catalog.yml
docs/: evaluation_results.json  shap_values.csv  temp_scaled_evaluation_results.json
frontend/: README.md
models/: feature_encoders.joblib  feature_scaler.joblib  feature_scaler.pkl  temp_scaled_loan_model.pth  temp_scaled_loan_model_config.json  trained_loan_model.pth  trained_loan_model_config.json
neural-core/: README.md  main.py  pyproject.toml  requirements.txt
neural-core/conf/base/: catalog.yml  parameters.yml
neural-core/docs/: best_settings.json  evaluation_results.json  shap_values.csv  temp_scaled_evaluation_results.json
neural-core/logs/: log_controller.py  report.txt
neural-core/models/: feature_scaler.pkl  temp_scaled_loan_model.pth  trained_loan_model.pth
neural-core/other/: exploration.py
neural-core/src/neural_core/: __init__.py  __main__.py  pipeline_registry.py  settings.py
neural-core/src/neural_core/models/: neural_network.py
neural-core/src/neural_core/pipelines/evaluation/: nodes.py  pipeline.py
neural-core/src/neural_core/pipelines/modelling/: nodes.py  pipeline.py
neural-core/src/neural_core/pipelines/preprocessing/: nodes.py  pipeline.py
neural-core/src/neural_core/pipelines/temp_calibration/: nodes.py  pipeline.py
neural-core/src/neural_core/pipelines/tuning/: nodes.py  pipeline.py
neural_core/: README.md  analysis_01.ipynb  analysis_02.ipynb  dataframe_dataset.py  how2use.py  main.py  model.pth  report.txt  workflow.ipynb
neural_core/analisys/: eda_feature-details.ipynb
neural_core/analysis/: eda_feature-details.ipynb  eda_general.ipynb
neural_core/analysis/old/: analysis_01.ipynb
neural_core/config/: logging_config.json
neural_core/models/: arena.py  dataset.py  neural_network.py
neural_core/repo/: loan_data_cleaned_1.csv
neural_core/tools/: data_preparator.py
src/loan_assistant/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/loan_assistant/models/: dataset.py  model_utils.py
src/loan_assistant/pipelines/evaluation/: nodes.py
src/loan_assistant/utils/: pytorch_model.py
(+6 files in other folders)
