[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.7",
    "plotly>=6.4.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
]
