[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "neural_core"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
 "ipython>=8.10",
 "jupyterlab>=3.0",
 "notebook",
 "kedro~=1.0.0",
 "torch>=2.8.0",
 "scikit-learn>=1.6.1",
 "optuna>=4.6.0",
 "pandas>=2.3.3",
 "numpy>=2.0.2",
 "seaborn>=0.13.2",
 "matplotlib>=3.9.4",
 "opencv-python>=4.11.0.86",
 "kedro-datasets[pandas]>=4.1.0",
]

[project.scripts]
neural-core = "neural_core.__main__:main"

[tool.kedro]
package_name = "neural_core"
project_name = "neural_core"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "neural_core.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "0b1c42dc8e53454bb00d9092dc82d869"
